--- a/frontend/styles/basic.css
+++ b/frontend/styles/basic.css
@@ -1,6 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=auto');
+@import url('./vars.css');
+
 * {
     box-sizing: border-box;
-    transition: all 0.1s ease-in-out;
+    transition: all 0s ease-in-out;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px #4a4952 inset !important;
+    -webkit-text-fill-color: #aaaaaa !important;
+    caret-color: white !important;
+    border: 1px solid var(--highligh-ops) !important;
 }
 
 ::-webkit-scrollbar {
@@ -26,6 +39,43 @@
 body, html {
     margin: 0;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    font-family: 'Roboto', sans-serif;
+    color: var(--main-text-color);
+    background-color: var(--bg);
+}
+
+input[type="text"], input[type="password"], input[type="email"] {
+    background-color: var(--highligh-ops);
+    border: 1px solid var(--highligh-ops);
+    border-radius: calc(var(--user-border-radius) * 2);
+    width: 100%;
+    padding: 0.8em;
+    color: var(--main-text-color);
+    outline: none;
+}
+
+input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
+    background-color: var(--highlight-ops-big);
+    border: 1px solid var(--signup-main);
+    outline: none;
+}
+
+input[type="submit"] {
+    background-color: var(--signup-main);
+    border: none;
+    border-radius: calc(var(--user-border-radius) * 2);
+    width: 100%;
+    padding: 0.8em;
+    color: var(--main-text-color);
+    outline: none;
+    font-weight: 500;
+    transition: all 0.2s ease;
+    margin-top: 2em;
+}
+
+input[type="submit"]:hover {
+    background-color: var(--signup-darken);
+    cursor: pointer;
 }
