--- a/frontend/styles/notAuthorized.css
+++ b/frontend/styles/notAuthorized.css
@@ -1,31 +1,24 @@
 body {
-    margin-left: 2em !important;
-}
-
-.choose {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.choose button {
-    margin: 0.5em;
-    padding: 1em;
-    border-radius: 0.3em;
-    border: none;
-    background-color: #454545;
-    color: white;
-    cursor: pointer;
-}
-
-.choose button.selected {
-    background-color: blueviolet;
+    background-color: var(--signup-main);
+    background-image: radial-gradient(circle, rgba(255, 255, 255, 0.459) 0%, rgba(255, 255, 255, 0.454) 10%, rgba(255, 255, 255, 0) 11%, rgba(255, 255, 255, 0) 100%);
+    background-size: 30px 30px;
+    background-attachment: fixed;
+    background-repeat: repeat;
+    background-position: 50% 50%;
 }
 
 iframe {
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    border: none;
     display: none;
 }
 
 iframe.selected {
     display: block;
+}
+
+div {
+    height: 100%;
 }
