--- a/frontend/styles/signup.css
+++ b/frontend/styles/signup.css
@@ -1,5 +1,23 @@
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: var(--signup-main);
+    background-image: radial-gradient(circle, rgba(255, 255, 255, 0.459) 0%, rgba(255, 255, 255, 0.454) 10%, rgba(255, 255, 255, 0) 11%, rgba(255, 255, 255, 0) 100%);
+    background-size: 30px 30px;
+    background-attachment: fixed;
+    background-repeat: repeat;
+    background-position: 50% 50%;
+}
+
 h2 {
     margin: 0;
+    margin-bottom: 0.3em;
+    margin-top: 0.6em;
+    font-size: 1.2em;
+    position: relative;
+    width: fit-content;
 }
 
 .avatarFinal {
@@ -8,4 +26,160 @@ h2 {
     border-radius: 50%;
     object-fit: cover;
     margin: 0.4em;
+}
+
+form {
+    width: 100%;
+    padding: 2em;
+    padding-top: 0;
+}
+
+h2.error::before {
+    content: "Required";
+    position: absolute;
+    top: 6px;
+    right: -50px;
+    font-size: 0.5em;
+    background-color: red;
+    width: 45px;
+    height: 12px;
+    display: block;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+
+    animation: blink 2s infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+section {
+    background-color: var(--bg);
+    border-radius: 2em;
+    padding: 0;
+    padding-top: 0.6em;
+    margin: 1em;
+    width: 75vw;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 550px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+section::-webkit-scrollbar {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+section::-webkit-scrollbar-thumb {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+section::-webkit-scrollbar-track {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.loginSwitch {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.5em;
+    color: var(--text-color-ops);
+    font-size: 0.8em;
+    background-color: var(--highligh-ops);
+}
+
+.loginSwitch a {
+    color: var(--small-dark-text-color);
+    text-decoration: underline;
+    margin-left: 0.5em;
+}
+
+.loginSwitch a:hover {
+    color: var(--text-color-ops);
+}
+
+.passwordContainer {
+    position: relative;
+}
+
+.passwordContainer input {
+    width: 100%;
+}
+
+.passwordContainer button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 2.4em;
+    background-color: transparent;
+    border: none;
+    color: var(--text-color-ops);
+    cursor: pointer;
+}
+
+input.error {
+    border: 1px solid red;
+}
+
+span.error {
+    color: red;
+    font-size: 0.7em;
+    display: block;
+    margin-top: 0.3em;
+    width: 100%;
+}
+.registerContainer {
+    position: relative;
+}
+
+#loading.hidden {
+    display: none;
+}
+
+#loading {
+    border: 4px solid transparent;
+    border-top-color: var(--text-color-ops);
+    border-bottom-color: var(--text-color-ops);
+    border-radius: 50%;
+    width: 1.5em;
+    height: 1.5em;
+    animation: spin 1s linear infinite;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
