--- a/frontend/styles/basic.css
+++ b/frontend/styles/basic.css
@@ -40,7 +40,7 @@ body, html {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     font-family: 'Roboto', sans-serif;
     color: var(--main-text-color);
     background-color: var(--bg);
